--- a/tcp_probe/Makefile
+++ b/tcp_probe/Makefile
@@ -1,13 +1,13 @@
-ifneq ($(KERNELRELEASE),) 
-   obj-m := tcp_probe_fixed.o
-else 
+ifneq ($(KERNELRELEASE),)
+   obj-m := tcp_probe.o
+else
 
-KERNELDIR ?= /lib/modules/$(shell uname -r)/build 
+KERNELDIR ?= /lib/modules/$(shell uname -r)/build
 
 PWD := $(shell pwd)
 
-default: 
+default:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
-endif 
+endif
 clean:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) clean
